Compil/Project/ProjetASL3_LUSTGARTEN_OUMAKHLOUF/test/syn-err/err1.tpc
int main(void) {
    int z;
    error; // error
    char c;
    return 0;
}